# pytango-moenchDetectorControl

./: .gitignore  MoenchDetectorControl.py  README.md  computer_setup.py  moench_tango_acquire_server.py  moench_tango_control_server.py  moench_tango_server.py  pyproject.toml  setup.py  start_tango_servers.sh
.conda/: meta.yaml
.github/workflows/: conda-publish-control.yml  version_tag_update.yml
controlmoenchtangods/: __init__.py  moenchcontrol.py
moenchcontroltangods/: computer_setup.py  moenchcontrol.py
tangods_moenchcontrol/: __init__.py  computer_setup.py  tangods_moench_control.py
