[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tangods_moenchcontrol"
description = "tango DeviceServer for control of moench detector"
keywords = ["tango device", "tango", "pytango", "moench"]
readme = "README.md"
authors = [
    {name = "Leonid Lunin", email = "lunin.leonid@gmail.com"},
]
requires-python = ">=3.10"
dependencies = [
    'pytango >= 9.3.6',
    'numpy >= 1.24.1',
    'bidict >= 0.22.1'
]
license = {text = "MIT"}
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/MBI-Div-B/pytango-moenchDetectorControl"

[project.scripts]
MoenchDetectorControl = "tangods_moenchcontrol:main"

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]

[tool.setuptools.package-data]
tangods_moenchcontrol = ["VERSION"]
